--- a/Data Analysis with Python Certificate/1A_Lecture.ipynb
+++ b/Data Analysis with Python Certificate/1A_Lecture.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/KevinGastelum/MyFreeCodeCamp_Certs/blob/main/Data%20Analysis%20with%20Python%20Certificate/1_A_Lecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/KevinGastelum/MyFreeCodeCamp_Certs/blob/main/Data%20Analysis%20with%20Python%20Certificate/1A_Lecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,7 +16,8 @@
         "id": "tuEzJlMaduQP"
       },
       "source": [
-        "\n",
+        "# **FreeCodeCamp Data Analyst Certificate (Lecture 1)**\n",
+        "---\n",
         "\n",
         "<img src=\"https://user-images.githubusercontent.com/7065401/58563302-42466a80-8201-11e9-9948-b3e9f88a5662.jpg\"\n",
         "    style=\"width:400px; float: right; margin: 0 40px 40px 40px;\"></img>\n",
@@ -41,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "2C_CfV9dduQT"
       },
@@ -74,7 +75,7 @@
         "id": "VhkvQL-9fVT_",
         "outputId": "6a312b16-02a2-4c98-a481-9040c6e2e470"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kd-7_y5IduQU",
         "outputId": "1390c482-5dca-42cf-d804-df79b9b270ae",
@@ -121,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Y3Nt9RiiduQV"
       },
@@ -145,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "iaHoKr3IduQW",
         "outputId": "a0bc263f-ad8b-4337-cc59-651204c9a57b",
@@ -426,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "6YDNC3RmduQX",
         "outputId": "c3e0dd6d-285e-47eb-e729-626a61cdd807",
@@ -452,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "QhgnDXV_duQX",
         "outputId": "94ccea12-52fc-4fd2-f10f-5216a32ca635",
@@ -499,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "eWsc0p9ZduQY",
         "outputId": "bf3a480b-3c0c-402f-9a82-ea45cd01bd4d",
@@ -777,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "PbRIBCmvduQY",
         "outputId": "5604d0b9-8ed5-40f7-f4a4-85b3db5d4556",
@@ -811,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "975AEMr6duQY",
         "outputId": "45ac0189-22e3-478e-a217-e9c4fe7a0da8",
@@ -837,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "pnZwzPUXduQZ",
         "outputId": "276150ce-7478-480e-de4b-4aff16a024a2",
@@ -863,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "mhTMXN6qduQZ",
         "outputId": "3f8b9904-5821-4586-dc57-5cc67ee4ff6f",
@@ -902,7 +903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "fG9nByqTduQZ",
         "outputId": "d0222eba-a98b-4092-8cbb-387e076f0b32",
@@ -941,7 +942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "Xvi2NMcCduQZ",
         "outputId": "415f2389-8ae4-46c0-e94d-b6668dadaf4e",
@@ -982,7 +983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "TJTvuIpMduQa",
         "outputId": "858aa8b6-4ce4-4206-d092-ffce0673c04f",
@@ -1036,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ccvGGLoHduQa",
         "outputId": "87b0ba9b-a89c-4594-9ac1-bd673fb333e1",
@@ -1317,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "IB5TGt2RduQa",
         "outputId": "6f25b51d-6b97-4502-a29f-98421cc53974",
@@ -1347,7 +1348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "su7fMf62duQb",
         "outputId": "1f959a31-0627-454b-ad15-34969e713f3c",
@@ -1384,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "mXXUmPNBduQb",
         "outputId": "24909535-e1f0-4a0c-fe1f-dda275cb4758",
@@ -1437,7 +1438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "rHuqfLahduQb",
         "outputId": "e1f11f3a-afe5-4d79-e124-8ce1d4a7938e",
@@ -1708,7 +1709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "c8Xlx1tbduQb",
         "outputId": "87e81328-e916-42c8-e480-9d00ada1f927",
@@ -1749,7 +1750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "V2aS0DkGduQc",
         "outputId": "6484ea44-27d5-416d-8f7f-36f0bf0814eb",
@@ -1788,7 +1789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "MHvm-izsduQc",
         "outputId": "4cb23eb1-1352-41a1-d9a6-e4b938404efe",
@@ -1836,7 +1837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "GZrBkNCXduQc",
         "outputId": "6e54d4e9-c21f-4d38-977d-a719d33e3c34",
@@ -1898,7 +1899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "9qQF2Ts7duQc",
         "outputId": "27e47b19-500d-4fdc-f62f-ce6aa23f7165",
@@ -1931,7 +1932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "0tMS1fyAduQc",
         "outputId": "450ee877-c644-4f84-e680-4f95e13c3ac7",
@@ -1970,7 +1971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "zWapZNWaduQh",
         "outputId": "60a7f1f7-341f-4367-8a76-1cee5a4acded",
@@ -2022,7 +2023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "hAfDLG0bduQi",
         "outputId": "8b3fc1bb-633b-461b-fdc3-b3057f28fd7d",
@@ -2055,7 +2056,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "POHioKFCduQi",
         "outputId": "ee8db5c1-ffd9-4fc1-f530-561ff257c354",
@@ -2090,7 +2091,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "T1XdpST4duQj",
         "outputId": "4ade3545-029f-4547-eee0-a6bb059ad5b0",
@@ -2142,7 +2143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "4PphsDjSduQj",
         "outputId": "e31775d9-4dfa-4e85-93b1-bf6bd398d29b",
@@ -2175,7 +2176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "Me-2smQ9duQj",
         "outputId": "5edbeaaf-420e-4433-9f28-a32f0ffa1113",
@@ -2201,7 +2202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "o9T_kZueduQj",
         "outputId": "097bc921-780e-4847-fb91-17439d2bad39",
@@ -2503,7 +2504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Hfy01dWPduQj",
         "outputId": "7f17b320-b9f8-4b98-a0f6-12e4272b87cf",
@@ -2551,7 +2552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "r1oAJVtgduQk",
         "outputId": "28f03d3f-bba6-4d23-9bcb-cce2db7e4d37",
@@ -2582,7 +2583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "-pzNIP1dduQk"
       },
@@ -2595,7 +2596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "ESQG4JeyduQk",
         "outputId": "de21c258-a8d2-4ccc-b5ed-bc9e86ad4b27",
@@ -2646,7 +2647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "Ayx07bHhduQk",
         "outputId": "b989ae8c-4360-4a0f-d5bd-1460fe900f7e",
@@ -3097,7 +3098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "Uu1LFan1duQl",
         "outputId": "c46d4308-6b65-4d65-c9e5-eba6ffa98b50",
@@ -3132,7 +3133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "Pn5HDVCaduQl",
         "outputId": "4996ed97-8388-44e6-bd6d-b12bf122e9e4",
@@ -3167,7 +3168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "2RedMLuyduQl",
         "outputId": "b409056c-808e-45d6-de5d-984409e2edce",
@@ -3202,7 +3203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "LMgndFjVduQm",
         "outputId": "e95d6ead-458c-4770-9c67-3609f093e72c",
@@ -3233,7 +3234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "u7nOOvgVduQm"
       },
@@ -3246,7 +3247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "C2rCz5E0duQm",
         "outputId": "21ca37e2-8007-4e28-cb00-55c9dffd88f7",
